parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> consts
Rule 1     consts -> CONST IDENTIFIER EQUALITY NUMBER SEMICOLON begin_program
Rule 2     consts -> CONST IDENTIFIER EQUALITY STRING SEMICOLON begin_program
Rule 3     consts -> CONST IDENTIFIER EQUALITY matrix SEMICOLON begin_program
Rule 4     consts -> begin_program
Rule 5     matrix -> OPEN_SQUARE_BRACKET identifiers CLOSE_SQUARE_BRACKET
Rule 6     identifiers -> IDENTIFIER ZAPYATAYA identifiers
Rule 7     identifiers -> NUMBER ZAPYATAYA identifiers
Rule 8     identifiers -> STRING ZAPYATAYA identifiers
Rule 9     identifiers -> IDENTIFIER
Rule 10    identifiers -> NUMBER
Rule 11    identifiers -> STRING
Rule 12    begin_program -> VAR declarations BEGIN body END POINT
Rule 13    block -> BEGIN body END SEMICOLON
Rule 14    body -> expression
Rule 15    identifier -> IDENTIFIER
Rule 16    identifier -> IDENTIFIER SEMICOLON
Rule 17    expression -> assignment expression
Rule 18    expression -> if expression
Rule 19    expression -> function expression
Rule 20    expression -> empty
Rule 21    expression -> while expression
Rule 22    expression -> for expression
Rule 23    expression -> break
Rule 24    break -> BREAK SEMICOLON
Rule 25    declarations -> declaration declarations
Rule 26    declarations -> empty
Rule 27    declaration -> IDENTIFIER another_identifiers COLON type SEMICOLON
Rule 28    another_identifiers -> ZAPYATAYA IDENTIFIER another_identifiers
Rule 29    another_identifiers -> empty
Rule 30    type -> TYPE_STRING
Rule 31    type -> TYPE_INTEGER
Rule 32    type -> TYPE_REAL
Rule 33    empty -> <empty>
Rule 34    assignment -> identifier ASSIGNMENT arithmetic_expression SEMICOLON
Rule 35    assignment -> identifier ASSIGNMENT function SEMICOLON
Rule 36    assignment -> identifier ASSIGNMENT function
Rule 37    assignment -> identifier ASSIGNMENT arithmetic_expression
Rule 38    arithmetic_expression -> NUMBER
Rule 39    arithmetic_expression -> identifier
Rule 40    arithmetic_expression -> STRING
Rule 41    arithmetic_expression -> function
Rule 42    arithmetic_expression -> identifier PLUS arithmetic_expression
Rule 43    arithmetic_expression -> identifier MINUS arithmetic_expression
Rule 44    arithmetic_expression -> identifier MUL arithmetic_expression
Rule 45    arithmetic_expression -> identifier DIV arithmetic_expression
Rule 46    arithmetic_expression -> NUMBER PLUS arithmetic_expression
Rule 47    arithmetic_expression -> NUMBER MINUS arithmetic_expression
Rule 48    arithmetic_expression -> NUMBER MUL arithmetic_expression
Rule 49    arithmetic_expression -> NUMBER DIV arithmetic_expression
Rule 50    arithmetic_expression -> function PLUS arithmetic_expression
Rule 51    arithmetic_expression -> function MINUS arithmetic_expression
Rule 52    arithmetic_expression -> function MUL arithmetic_expression
Rule 53    arithmetic_expression -> function DIV arithmetic_expression
Rule 54    arithmetic_expression -> identifier OPEN_SQUARE_BRACKET arithmetic_expression CLOSE_SQUARE_BRACKET
Rule 55    arithmetic_expression -> arithmetic_expression PLUS arithmetic_expression
Rule 56    arithmetic_expression -> arithmetic_expression MINUS arithmetic_expression
Rule 57    arithmetic_expression -> arithmetic_expression MUL arithmetic_expression
Rule 58    arithmetic_expression -> arithmetic_expression DIV arithmetic_expression
Rule 59    arithmetic_expression -> arithmetic_expression SEMICOLON
Rule 60    function -> WRITE OPEN_BRACKET arithmetic_expression CLOSE_BRACKET SEMICOLON
Rule 61    function -> WRITELN OPEN_BRACKET arithmetic_expression CLOSE_BRACKET SEMICOLON
Rule 62    function -> READ OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
Rule 63    function -> READLN OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
Rule 64    function -> LENGTH OPEN_BRACKET identifier CLOSE_BRACKET
Rule 65    function -> INC OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
Rule 66    function -> LENGTH OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
Rule 67    predicate -> arithmetic_expression COMPARISON arithmetic_expression
Rule 68    predicate -> arithmetic_expression EQUALITY arithmetic_expression
Rule 69    predicate -> arithmetic_expression NON_EQUALITY arithmetic_expression
Rule 70    predicate -> arithmetic_expression NON_STRICT_COMPARISON arithmetic_expression
Rule 71    predicate -> arithmetic_expression IN identifier
Rule 72    predicate -> arithmetic_expression IN matrix
Rule 73    some_predicates -> OPEN_BRACKET predicate CLOSE_BRACKET AND some_predicates
Rule 74    some_predicates -> OPEN_BRACKET predicate CLOSE_BRACKET OR some_predicates
Rule 75    some_predicates -> OPEN_BRACKET predicate CLOSE_BRACKET
Rule 76    some_predicates -> OPEN_BRACKET NOT OPEN_BRACKET predicate CLOSE_BRACKET CLOSE_BRACKET AND some_predicates
Rule 77    some_predicates -> OPEN_BRACKET NOT OPEN_BRACKET predicate CLOSE_BRACKET CLOSE_BRACKET OR some_predicates
Rule 78    some_predicates -> OPEN_BRACKET NOT OPEN_BRACKET predicate CLOSE_BRACKET CLOSE_BRACKET
Rule 79    while -> WHILE OPEN_BRACKET predicate CLOSE_BRACKET DO block
Rule 80    while -> WHILE some_predicates DO block
Rule 81    for -> FOR assignment TO arithmetic_expression DO block
Rule 82    for -> FOR assignment DOWNTO arithmetic_expression DO block
Rule 83    if -> IF OPEN_BRACKET predicate CLOSE_BRACKET THEN block
Rule 84    if -> IF OPEN_BRACKET predicate CLOSE_BRACKET THEN block else
Rule 85    else -> ELSE block

Terminals, with rules where they appear

AND                  : 73 76
ASSIGNMENT           : 34 35 36 37
BEGIN                : 12 13
BREAK                : 24
CLOSE_BRACKET        : 60 61 62 63 64 65 66 73 74 75 76 76 77 77 78 78 79 83 84
CLOSE_SQUARE_BRACKET : 5 54
COLON                : 27
COMPARISON           : 67
CONST                : 1 2 3
DIV                  : 45 49 53 58
DO                   : 79 80 81 82
DOWNTO               : 82
ELSE                 : 85
END                  : 12 13
EQUALITY             : 1 2 3 68
FOR                  : 81 82
IDENTIFIER           : 1 2 3 6 9 15 16 27 28
IF                   : 83 84
IN                   : 71 72
INC                  : 65
LENGTH               : 64 66
MINUS                : 43 47 51 56
MUL                  : 44 48 52 57
NON_EQUALITY         : 69
NON_STRICT_COMPARISON : 70
NOT                  : 76 77 78
NUMBER               : 1 7 10 38 46 47 48 49
OPEN_BRACKET         : 60 61 62 63 64 65 66 73 74 75 76 76 77 77 78 78 79 83 84
OPEN_SQUARE_BRACKET  : 5 54
OR                   : 74 77
PLUS                 : 42 46 50 55
POINT                : 12
READ                 : 62
READLN               : 63
SEMICOLON            : 1 2 3 13 16 24 27 34 35 59 60 61 62 63 65 66
STRING               : 2 8 11 40
THEN                 : 83 84
TO                   : 81
TYPE_INTEGER         : 31
TYPE_REAL            : 32
TYPE_STRING          : 30
VAR                  : 12
WHILE                : 79 80
WRITE                : 60
WRITELN              : 61
ZAPYATAYA            : 6 7 8 28
error                : 

Nonterminals, with rules where they appear

another_identifiers  : 27 28
arithmetic_expression : 34 37 42 43 44 45 46 47 48 49 50 51 52 53 54 55 55 56 56 57 57 58 58 59 60 61 67 67 68 68 69 69 70 70 71 72 81 82
assignment           : 17 81 82
begin_program        : 1 2 3 4
block                : 79 80 81 82 83 84 85
body                 : 12 13
break                : 23
consts               : 0
declaration          : 25
declarations         : 12 25
else                 : 84
empty                : 20 26 29
expression           : 14 17 18 19 21 22
for                  : 22
function             : 19 35 36 41 50 51 52 53
identifier           : 34 35 36 37 39 42 43 44 45 54 62 63 64 65 66 71
identifiers          : 5 6 7 8
if                   : 18
matrix               : 3 72
predicate            : 73 74 75 76 77 78 79 83 84
some_predicates      : 73 74 76 77 80
type                 : 27
while                : 21

Parsing method: LALR

state 0

    (0) S' -> . consts
    (1) consts -> . CONST IDENTIFIER EQUALITY NUMBER SEMICOLON begin_program
    (2) consts -> . CONST IDENTIFIER EQUALITY STRING SEMICOLON begin_program
    (3) consts -> . CONST IDENTIFIER EQUALITY matrix SEMICOLON begin_program
    (4) consts -> . begin_program
    (12) begin_program -> . VAR declarations BEGIN body END POINT

    CONST           shift and go to state 4
    VAR             shift and go to state 3

    consts                         shift and go to state 2
    begin_program                  shift and go to state 1

state 1

    (4) consts -> begin_program .

    $end            reduce using rule 4 (consts -> begin_program .)


state 2

    (0) S' -> consts .



state 3

    (12) begin_program -> VAR . declarations BEGIN body END POINT
    (25) declarations -> . declaration declarations
    (26) declarations -> . empty
    (27) declaration -> . IDENTIFIER another_identifiers COLON type SEMICOLON
    (33) empty -> .

    IDENTIFIER      shift and go to state 7
    BEGIN           reduce using rule 33 (empty -> .)

    declaration                    shift and go to state 6
    declarations                   shift and go to state 5
    empty                          shift and go to state 8

state 4

    (1) consts -> CONST . IDENTIFIER EQUALITY NUMBER SEMICOLON begin_program
    (2) consts -> CONST . IDENTIFIER EQUALITY STRING SEMICOLON begin_program
    (3) consts -> CONST . IDENTIFIER EQUALITY matrix SEMICOLON begin_program

    IDENTIFIER      shift and go to state 9


state 5

    (12) begin_program -> VAR declarations . BEGIN body END POINT

    BEGIN           shift and go to state 10


state 6

    (25) declarations -> declaration . declarations
    (25) declarations -> . declaration declarations
    (26) declarations -> . empty
    (27) declaration -> . IDENTIFIER another_identifiers COLON type SEMICOLON
    (33) empty -> .

    IDENTIFIER      shift and go to state 7
    BEGIN           reduce using rule 33 (empty -> .)

    declarations                   shift and go to state 11
    empty                          shift and go to state 8
    declaration                    shift and go to state 6

state 7

    (27) declaration -> IDENTIFIER . another_identifiers COLON type SEMICOLON
    (28) another_identifiers -> . ZAPYATAYA IDENTIFIER another_identifiers
    (29) another_identifiers -> . empty
    (33) empty -> .

    ZAPYATAYA       shift and go to state 12
    COLON           reduce using rule 33 (empty -> .)

    empty                          shift and go to state 14
    another_identifiers            shift and go to state 13

state 8

    (26) declarations -> empty .

    BEGIN           reduce using rule 26 (declarations -> empty .)


state 9

    (1) consts -> CONST IDENTIFIER . EQUALITY NUMBER SEMICOLON begin_program
    (2) consts -> CONST IDENTIFIER . EQUALITY STRING SEMICOLON begin_program
    (3) consts -> CONST IDENTIFIER . EQUALITY matrix SEMICOLON begin_program

    EQUALITY        shift and go to state 15


state 10

    (12) begin_program -> VAR declarations BEGIN . body END POINT
    (14) body -> . expression
    (17) expression -> . assignment expression
    (18) expression -> . if expression
    (19) expression -> . function expression
    (20) expression -> . empty
    (21) expression -> . while expression
    (22) expression -> . for expression
    (23) expression -> . break
    (34) assignment -> . identifier ASSIGNMENT arithmetic_expression SEMICOLON
    (35) assignment -> . identifier ASSIGNMENT function SEMICOLON
    (36) assignment -> . identifier ASSIGNMENT function
    (37) assignment -> . identifier ASSIGNMENT arithmetic_expression
    (83) if -> . IF OPEN_BRACKET predicate CLOSE_BRACKET THEN block
    (84) if -> . IF OPEN_BRACKET predicate CLOSE_BRACKET THEN block else
    (60) function -> . WRITE OPEN_BRACKET arithmetic_expression CLOSE_BRACKET SEMICOLON
    (61) function -> . WRITELN OPEN_BRACKET arithmetic_expression CLOSE_BRACKET SEMICOLON
    (62) function -> . READ OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
    (63) function -> . READLN OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
    (64) function -> . LENGTH OPEN_BRACKET identifier CLOSE_BRACKET
    (65) function -> . INC OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
    (66) function -> . LENGTH OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
    (33) empty -> .
    (79) while -> . WHILE OPEN_BRACKET predicate CLOSE_BRACKET DO block
    (80) while -> . WHILE some_predicates DO block
    (81) for -> . FOR assignment TO arithmetic_expression DO block
    (82) for -> . FOR assignment DOWNTO arithmetic_expression DO block
    (24) break -> . BREAK SEMICOLON
    (15) identifier -> . IDENTIFIER
    (16) identifier -> . IDENTIFIER SEMICOLON

    IF              shift and go to state 29
    WRITE           shift and go to state 30
    WRITELN         shift and go to state 19
    READ            shift and go to state 17
    READLN          shift and go to state 32
    LENGTH          shift and go to state 28
    INC             shift and go to state 36
    END             reduce using rule 33 (empty -> .)
    WHILE           shift and go to state 18
    FOR             shift and go to state 25
    BREAK           shift and go to state 21
    IDENTIFIER      shift and go to state 22

    body                           shift and go to state 24
    function                       shift and go to state 16
    for                            shift and go to state 31
    assignment                     shift and go to state 26
    break                          shift and go to state 27
    while                          shift and go to state 33
    identifier                     shift and go to state 34
    expression                     shift and go to state 35
    empty                          shift and go to state 23
    if                             shift and go to state 20

state 11

    (25) declarations -> declaration declarations .

    BEGIN           reduce using rule 25 (declarations -> declaration declarations .)


state 12

    (28) another_identifiers -> ZAPYATAYA . IDENTIFIER another_identifiers

    IDENTIFIER      shift and go to state 37


state 13

    (27) declaration -> IDENTIFIER another_identifiers . COLON type SEMICOLON

    COLON           shift and go to state 38


state 14

    (29) another_identifiers -> empty .

    COLON           reduce using rule 29 (another_identifiers -> empty .)


state 15

    (1) consts -> CONST IDENTIFIER EQUALITY . NUMBER SEMICOLON begin_program
    (2) consts -> CONST IDENTIFIER EQUALITY . STRING SEMICOLON begin_program
    (3) consts -> CONST IDENTIFIER EQUALITY . matrix SEMICOLON begin_program
    (5) matrix -> . OPEN_SQUARE_BRACKET identifiers CLOSE_SQUARE_BRACKET

    NUMBER          shift and go to state 40
    STRING          shift and go to state 39
    OPEN_SQUARE_BRACKET shift and go to state 41

    matrix                         shift and go to state 42

state 16

    (19) expression -> function . expression
    (17) expression -> . assignment expression
    (18) expression -> . if expression
    (19) expression -> . function expression
    (20) expression -> . empty
    (21) expression -> . while expression
    (22) expression -> . for expression
    (23) expression -> . break
    (34) assignment -> . identifier ASSIGNMENT arithmetic_expression SEMICOLON
    (35) assignment -> . identifier ASSIGNMENT function SEMICOLON
    (36) assignment -> . identifier ASSIGNMENT function
    (37) assignment -> . identifier ASSIGNMENT arithmetic_expression
    (83) if -> . IF OPEN_BRACKET predicate CLOSE_BRACKET THEN block
    (84) if -> . IF OPEN_BRACKET predicate CLOSE_BRACKET THEN block else
    (60) function -> . WRITE OPEN_BRACKET arithmetic_expression CLOSE_BRACKET SEMICOLON
    (61) function -> . WRITELN OPEN_BRACKET arithmetic_expression CLOSE_BRACKET SEMICOLON
    (62) function -> . READ OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
    (63) function -> . READLN OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
    (64) function -> . LENGTH OPEN_BRACKET identifier CLOSE_BRACKET
    (65) function -> . INC OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
    (66) function -> . LENGTH OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
    (33) empty -> .
    (79) while -> . WHILE OPEN_BRACKET predicate CLOSE_BRACKET DO block
    (80) while -> . WHILE some_predicates DO block
    (81) for -> . FOR assignment TO arithmetic_expression DO block
    (82) for -> . FOR assignment DOWNTO arithmetic_expression DO block
    (24) break -> . BREAK SEMICOLON
    (15) identifier -> . IDENTIFIER
    (16) identifier -> . IDENTIFIER SEMICOLON

    IF              shift and go to state 29
    WRITE           shift and go to state 30
    WRITELN         shift and go to state 19
    READ            shift and go to state 17
    READLN          shift and go to state 32
    LENGTH          shift and go to state 28
    INC             shift and go to state 36
    END             reduce using rule 33 (empty -> .)
    WHILE           shift and go to state 18
    FOR             shift and go to state 25
    BREAK           shift and go to state 21
    IDENTIFIER      shift and go to state 22

    function                       shift and go to state 16
    for                            shift and go to state 31
    assignment                     shift and go to state 26
    break                          shift and go to state 27
    while                          shift and go to state 33
    identifier                     shift and go to state 34
    expression                     shift and go to state 43
    empty                          shift and go to state 23
    if                             shift and go to state 20

state 17

    (62) function -> READ . OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON

    OPEN_BRACKET    shift and go to state 44


state 18

    (79) while -> WHILE . OPEN_BRACKET predicate CLOSE_BRACKET DO block
    (80) while -> WHILE . some_predicates DO block
    (73) some_predicates -> . OPEN_BRACKET predicate CLOSE_BRACKET AND some_predicates
    (74) some_predicates -> . OPEN_BRACKET predicate CLOSE_BRACKET OR some_predicates
    (75) some_predicates -> . OPEN_BRACKET predicate CLOSE_BRACKET
    (76) some_predicates -> . OPEN_BRACKET NOT OPEN_BRACKET predicate CLOSE_BRACKET CLOSE_BRACKET AND some_predicates
    (77) some_predicates -> . OPEN_BRACKET NOT OPEN_BRACKET predicate CLOSE_BRACKET CLOSE_BRACKET OR some_predicates
    (78) some_predicates -> . OPEN_BRACKET NOT OPEN_BRACKET predicate CLOSE_BRACKET CLOSE_BRACKET

    OPEN_BRACKET    shift and go to state 45

    some_predicates                shift and go to state 46

state 19

    (61) function -> WRITELN . OPEN_BRACKET arithmetic_expression CLOSE_BRACKET SEMICOLON

    OPEN_BRACKET    shift and go to state 47


state 20
